--- a/special-topics/Day_1.html
+++ b/special-topics/Day_1.html
@@ -65,6 +65,7 @@
 <li><b>Day 1</b></li>
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
+<li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 </ul>
 
 </div>
