--- a/special-topics/Day_2.html
+++ b/special-topics/Day_2.html
@@ -65,6 +65,7 @@
 <li><a href="./Day_1.html" title="Day 1" class="page">Day 1</a></li>
 <li><b>Day 2</b></li>
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
+<li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 </ul>
 
 </div>
@@ -189,7 +190,7 @@ Good ol' HTML looks like this:
 <pre><code class="html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;title&gt;HTML make me physically ill and horribly depressed.&lt;/title&gt;
+    &lt;title&gt;HTML :(&lt;/title&gt;
     
     &lt;!-- This is internal CSS. As opposed to inline and external in another file --&gt;
     &lt;style&gt;
