--- a/special-topics/Day_3.html
+++ b/special-topics/Day_3.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Day_4.html'>Next</a> ]
 </div>
 
 <hr />
@@ -65,6 +65,7 @@
 <li><a href="./Day_1.html" title="Day 1" class="page">Day 1</a></li>
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><b>Day 3</b></li>
+<li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 </ul>
 
 </div>
