--- a/web-apps/Day_5.html
+++ b/web-apps/Day_5.html
@@ -68,6 +68,8 @@
 <li><b>Day 5</b></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
+<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
+<li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
@@ -103,7 +105,7 @@ Now, why is the phrase, "<i>an object is an instance of a class" </i>wrong? Well
   int a;
 }
 
-class myclass {
+class myclass2 {
   int b;
 }</code></pre>
 </div>
@@ -119,7 +121,7 @@ An object is an instance of a member of a class.
 </p>
 
 <p>
-An object is built given from the definiitons of a class.
+An object is built given from the definitons of a class.
 </p>
 
 <p>
