--- a/web-apps/Day_7.html
+++ b/web-apps/Day_7.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Important_Links.html'>Next</a> ]
+	[ <a href='./Day_8.html'>Next</a> ]
 </div>
 
 <hr />
@@ -68,6 +68,8 @@
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><b>Day 7</b></li>
+<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
+<li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
@@ -269,6 +271,11 @@ An exam is coming! Don't forget it. Week of March 2nd or 9th. Most likely 2nd.
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='./Day_8.html'>Day 8</a>
+
+		<br /><br />
 
 	</div>
 
