--- a/web-apps/Day_8.html
+++ b/web-apps/Day_8.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Day 4</title>
+	<title>Day 8</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,11 +51,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_3.html'>Prev</a> ]
+	[ <a href='./Day_7.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Day_5.html'>Next</a> ]
+	[ <a href='./Day_9.html'>Next</a> ]
 </div>
 
 <hr />
@@ -64,11 +64,11 @@
 <ul>
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
-<li><b>Day 4</b></li>
+<li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
-<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
+<li><b>Day 8</b></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
@@ -80,72 +80,123 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Day 4 <a name='Day 4'></a></h1>
+	<h1>Day 8 <a name='Day 8'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Thursday 06 February 2020
+Created Thursday 20 February 2020
 </p>
 
 <p>
-A <b>floating point number</b> is an approximation of a real floating point number. With pencil an paper, we know that 1/3 = 0.3333... We as humans can understand that this goes on forever. We know there is a tiny error in there. However, in a floating point number we have 0.333333. And that's it. It doesn't go on forever.
+We are starting the day with a handout. It has an example working handout.
 </p>
 
 <p>
-Now then, imagine this: the source code can be perfectly correct. The machine code matches the source code. But the results are still wrong! Why? The architecture of the two machines handle the floating points differently!
+Remember, clunky code that works always jumps amazing, excellent, elegant, beautiful code that doesn't.
 </p>
 
 <p>
-<b>It is a mistake to believe that you can get accurate results in business program with floating points numbers.</b> Computer floating point numbers are approximations of real numbers. It's hard to represent in binary. In business programs, you can't get accurate results. People get away with it because the errors are so small no one notices. At one bank, they even stated that if the error was under $5000 then ignore it. That means some programmer could introduce some error and have that excess money come to them!
+Select advanced student in DrRacket if you don't want to see cons being spammed when you make a list. Guile on the other hand would shorten (list a b c) to (a b c). Keep that in mind. It's a short hand for the list.
+</p>
+
+<h3>SVN</h3>
+
+<p>
+You don't have to mention the directory name if you're already inside of there (I believe he meant that for SVN).
 </p>
 
 <p>
-70% of the countries business is processed by <b>kobol</b> code. No one uses it though! It's lacking programmers. Kobol gets exact results when working with decimals (it is native to kobol. Decimal numbers are native. In Java/C++, they use floating point numbers via binary. You can't get an exact representation for many floating point decimal numbers. Anything to the right of the decimal such as dollars and cents. It gets messier and messier. PL1 and Kobol handle decimals natively). That's why it's still used. The language itself is good but people are mistakenly believing that it's dead. Managers quit advertising today due to lack of people knowing how to use it. You'll have to contact them yourself to inquire for work with Kobol.
+Also, you can do hyphen f instead of manually creating tags, branches, and trunk.
 </p>
 
 <p>
-The big numbers classes such as in Java have to employ all sorts of rounding techniques to make them work.
+You'll find that these directories are necessary for any reasonable version control system. They are there <i>somewhere</i> but their location may not be so easy.
+</p>
+
+<h3>Algol-60</h3>
+
+<p>
+This was an old language designed for communicating algorithms. ACM (Association for Computing Machinery) published a periodical in which people could submit algorithms. The required language of these submissions was Algol-60. Algol-60 was popular in Europe for a while too.
 </p>
 
 <p>
-Also, don't multiply large numbers by small ones!
+Recurrsion was built right into Algol-60.
 </p>
 
 <p>
-<b>Never ever compare floating point numbers for equality! </b>Why is it possible to get a false on this even if float A and B represent the same number? For example, 1.000000 and 0.999999 are very close but still not equal! What's special about these two numbers? <b>They represent exactly the same real number!</b> That number is 1 of course. In fact, in floating pointer arithmetic +0 != -0. Remember from architecture class, you can represent 0 in both positive and negative!
+We don't have a decent way of defining all of the semantics of a programming language.
 </p>
 
 <p>
-Looks at this:<br>
-+12345.00000<br>
-  00000.12345<br>
-________________<br>
-  12345.12345
+PL/1 by IBM is a pretty nice language our professor states. Easy to work with, code is efficient, and has nice tools to assist a programmers efforts. You can turn on bounds checking for arrays which checks if references are in bounds. However, this adds a lot of overhead to our computing. However, we have the option to turn it off. Best of both worlds. We can have an <i>interupt</i> which, I believe he said, allows us to turn it on temporarily. Or we could just let the whole thing crash.
 </p>
 
 <p>
-The above has 10 digits of precision. How many digits of these are reliable? <b>NONE!</b> You can't trust any of them.
+<i>Take a look at Algol-60's specification language. </i>In fact, XML (extensible markup language) is an <i>extension</i> of a language known as BNF (Backus-Nauer Form. They were the names of the inventors of the language). In fact, BNF only has two symbols which are ::=. This can be just read as <i>is.</i>
 </p>
 
 <p>
-Many books recommend to always use double. Is this good advice? <b>NO!</b> What if we only have 41bytes of ram? Double takes up too much space! Floating point takes up have the space. Keeping in mind resource ussage is very important.
+So then, we get this where | is OR and &lt;foo&gt; is metalanguage:
+</p>
+<div class="zim-object">
+<pre><code class="c">&lt;letter&gt; ::= a|b|c</code></pre>
+</div>
+
+<br>
+
+<p>
+The &lt;&gt; are considered a to be a simple modern approach. Look at this:
+</p>
+<div class="zim-object">
+<pre><code class="c">&lt;integer&gt; ::= digit | &lt;integer&gt;&lt;digit&gt;
+&lt;digit&gt; ::= 0|1|2|3|4|5|6|7|8|9</code></pre>
+</div>
+
+<p>
+So then, an integer is a digit or an integer followed by another digit. Isn't it nice and simple? The only thing that might throw you off is the <b>recursion</b> implied in &lt;integer&gt;. Notice how we can just keep adding digit after digit after digit.
 </p>
 
 <p>
-All operations on 64bit linux has slowed down. Why? Likely because the programmers decide that this is a good excuse to spam double variables and taking up tons of memory. Regardless of the actual data on this, the main idea is that <b>be wary of resource usage.</b>
+Sadly, BNF does have some shortcomings. For example <i>it can't count!</i>
 </p>
 
 <p>
-The <b>cloud </b>used to be called a <b>time sharing system</b> by the way. You probably don't need to memorize this but you never know. 
+<b>Think about how you'd use BNF for some business application.</b> How about in this simple form? Think about it. It can be done!
+</p>
+
+<h3>QA</h3>
+
+<p>
+QA should be using SVN or something I believe.
+</p>
+
+<h3>Steam</h3>
+
+<p>
+Add the specs document to the repository.
+</p>
+
+<h3>Exam</h3>
+
+<p>
+It is March 3rd. <b>Give up hope that this will be a multiple choice exam.</b>
+</p>
+
+<h3>Homework</h3>
+
+<p>
+Find a program that has <b>at least two source files!</b> At least 2 .cpp, .java, or .c files that can be separately compile. Compile them separately then fuse them together into a single .exe file (or jar if doing java). For those two files, use whatever you want. You don't have to even write them if you don't want to.
 </p>
 
 <p>
-I am group 1 specs.
+Also, don't forget to read those chapters on the GNU website! Refer to to <a href="./Day_7.html" title="Day 7" class="page">Day 7</a> homework for details.
 </p>
 
+<h5>Exam HW</h5>
+
 <p>
-There is an IEEE specification on how to write documents.
+You must come in with three questions. <b>Come in with three question next Thursday! </b>That is, <b>2/27/2020. </b>Question you do want to see, you don't want to see, and 
 </p>
 
 	</div>
