--- a/web-apps/Important_Links.html
+++ b/web-apps/Important_Links.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_7.html'>Prev</a> ]
+	[ <a href='./Day_9.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -68,6 +68,8 @@
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
+<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
+<li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
 <li><b>Important Links</b></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
