--- a/web-apps/Day_7.html
+++ b/web-apps/Day_7.html
@@ -70,6 +70,7 @@
 <li><b>Day 7</b></li>
 <li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
+<li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
