--- a/web-apps/Day_9.html
+++ b/web-apps/Day_9.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Important_Links.html'>Next</a> ]
+	[ <a href='./Day_10.html'>Next</a> ]
 </div>
 
 <hr />
@@ -70,6 +70,7 @@
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
 <li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><b>Day 9</b></li>
+<li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><a href="./Important_Links.html" title="Important Links" class="page">Important Links</a></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
