--- a/web-apps/Important_Links.html
+++ b/web-apps/Important_Links.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_9.html'>Prev</a> ]
+	[ <a href='./Day_10.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -70,6 +70,7 @@
 <li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
 <li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
 <li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
+<li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
 <li><b>Important Links</b></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
 </ul>
