updated special topics website

--- a/special-topics/Day_4.html
+++ b/special-topics/Day_4.html
@@ -55,7 +55,7 @@
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <span class='insen'>Next</span> ]
+	[ <a href='./Day_5.html'>Next</a> ]
 </div>
 
 <hr />
@@ -66,6 +66,7 @@
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><a href="./Day_3.html" title="Day 3" class="page">Day 3</a></li>
 <li><b>Day 4</b></li>
+<li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 </ul>
 
 </div>
