--- a/special-topics/Day_3.html
+++ b/special-topics/Day_3.html
@@ -66,6 +66,7 @@
 <li><a href="./Day_2.html" title="Day 2" class="page">Day 2</a></li>
 <li><b>Day 3</b></li>
 <li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
+<li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 </ul>
 
 </div>
